Dojo HorizontalSlider: does not work in widget context

--- a/blu.css
+++ b/blu.css
@@ -40,6 +40,9 @@ body,
     background-color: transparent !important;
     color:#0079c1 !important;
 }
+.popupbtn {
+    float:right;
+}
 /* END own widgets */
 
 
