--- a/blu.css
+++ b/blu.css
@@ -54,6 +54,9 @@ body,
     margin-bottom:5px;
     display:block;
 }
+.drive-viewer-video {
+    height:290px !important;
+}
 /* END own widgets */
 
 
@@ -69,3 +72,8 @@ body,
     padding-top: 45% !important;
 }
 /* END adjusting Calcite elements */
+
+
+#visualization {
+    background:#fff;
+}
